# -EdjudicateAI

./: .gitignore  API_README.md  DEPLOYMENT.md  QUICK_DEPLOY.md  README.md  deploy.sh  deploy_config.py  packages.txt  pyproject.local.toml  pyproject.toml  requirements.txt  requirements_deploy.txt  setup.local.py  streamlit_app.py
.streamlit/: config.toml
app/: main.py
data/session_20250808_033956/backup/: faiss.index
data/session_20250808_041407/backup/: chunks.pkl
data/session_20250808_194042/backup/: chunks.pkl  faiss.index
edjudicate_ai_app/: __init__.py
edjudicate_ai_app/app/: __init__.py  main.py
edjudicate_ai_app/app/core/: __init__.py  embedder.py  engine.py  retriever.py
edjudicate_ai_app/app/ingestion/: __init__.py  chunk.py
edjudicate_ai_app/config/: __init__.py  config.yaml
edjudicate_ai_app/ui/: __init__.py  app.py  app.txt
edjudicateai/: __init__.py
ui/: app.py
