[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edjudicate-ai-app"
version = "0.1.0"
description = "Edjudicate AI - Intelligent Policy Document Analyzer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.47.1",
    "requests>=2.31.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sentence-transformers>=5.0.0",
    "langchain>=0.3.26",
    "google-generativeai>=0.8.5",
    "python-docx>=1.2.0",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "unstructured>=0.18.9",
    "faiss-cpu>=1.11.0.post1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "tiktoken>=0.9.0",
    "tf-keras>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["edjudicate_ai_app*"]
exclude = ["tests*", "scripts*", "data*", "temp_uploads*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.toml", "*.md"]
